--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "nodejs",
+  "name": "telegram-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Telegram bot to monitor inappropriate language and ban users.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["telegram", "bot", "nodejs"],
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
